testing/tests/src/test/resources/golden/RuntimeTest/invalid-thread-checker-missing-method.golden.txt
error: Invalid value: Unable to find method `assertThreadAccess` in class test.InvalidThreadChecker4
Encountered:
  here: Option yatagan.threadCheckerClassName = test.InvalidThreadChecker4
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~